2006-07-12  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/Makefile.am (libfvwm_a_SOURCES):
	* libs/fvwm_sys_stat.h:
	added compat file

	* configure.ac:
	added O_NOFOLLOW replacement and always include fcntl.h

2006-07-12  Scott Smedley  <ss@aao.gov.au>
	* libs/Parse.c:
	Added DV's mailing-list comments about how PeekToken & GetNextToken
	work as comments to the source code. (slightly modified)

2006-07-11  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/schedule.c (CMD_Schedule):
	Fixed parsing of "Periodic" option.

2006-07-11  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	Fix for tempfile vulnerabilities in FvwmCommand.
	* configure.ac:
	Added check for lstat.

2006-07-12  Scott Smedley  <ss@aao.gov.au>
	* fvwm/schedule.c:
	* NEWS:
	* AUTHORS:
	* fvwm/fvwm.1.in:
	Added "Periodic" option to Schedule command.

2006-07-11  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/module_interface.c (KillModule, ClosePipes):
	fixed KillModule


2006-07-09  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/fvwm.c (main):
	changed the -blackout warning to say it will be removed in 3.0

	* fvwm/fvwm.1.in (-blackout):
	updated the manual regarding the future remotion of -blackout

2006-07-08  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	* configure.ac:
	added $EXEEXT to FvwmGtk in order to compile on Cygwin (bug #3772).

2006-07-08  Renato Caldas  <seventhguardian@gmail.com>

	*libs/alloca.c (DEBUG_I00FUNC)
	removed old debug code

2006-07-07  Renato Caldas  <seventhguardian@gmail.com>

	* libs/debug.c:
	removed the old unused file

	* libs/Makefile.am (libfvwm_a_SOURCES):
	removed the reference to debug.c

	* libs/fvwmlib.h:
	removed the code related to libs/debug.c

	* fvwm/module_interface.c (make_named_packet)
	removed the #if 0'ed debug code related to debug.c

	fvwm/focus.h (DEBUG_FOCUS)
	removed the #ifdef'ed to 0 debug code related to debug.c


2006-07-06  Renato Caldas  <seventhguardian@gmail.com>
