@@ -1,5 +1,8 @@
 2006-07-12  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
+	* fvwm/placement.c (__explain_placement):
+	print initial size of window too
+
 	* libs/Makefile.am (libfvwm_a_SOURCES):
 	* libs/fvwm_sys_stat.h:
 	added compat file
